feat: Se arreglan detalles.

--- a/Informe Contexto Económico.Rmd
+++ b/Informe Contexto Económico.Rmd
@@ -267,7 +267,7 @@ ggplot(TipoCambio1, aes(x = Fecha)) +
 
 En diciembre de 2022, el tipo de cambio cerró con una tasa de compra de $₡594/US\$$ y una tasa de venta de $₡601/US\$$. Estas cifras fueron notablemente más bajas en comparación con los niveles observados a lo largo del año, el cual estuvo caracterizado por una alta volatilidad en esta variable. Durante el año, el tipo de cambio experimentó una apreciación del 7%. Inicialmente, el tipo de cambio mostró una tendencia al alza en los primeros meses, alcanzando su punto más alto a mediados del año, sin embargo, experimentó un alto en el segundo semestre tras el anuncio por parte del Banco Central de Costa Rica (BCCR) de una serie de medidas destinadas a controlar esta tendencia. Como resultado, en el segundo semestre del año, el tipo de cambio comenzó a descender. Entre las medidas adoptadas por el BCCR para contrarrestar el alza en el tipo de cambio se encuentran la emisión de instrumentos financieros en dólares, la reducción del horario de negociación del MONEX y el otorgamiento de un préstamo de $1 000 millones al Fondo Latinoamérica de Reservas (FLAR) con el fin de fortalecer las reservas del país.
 
-Durante el 2023, el tipo de cambio en Costa Rica se promedió en $₡544,5/US$, alcanzando un nivel de precios que no se había visto desde el año 2016. Este valor incluso superó la cifra registrada hace 14 años, en 2009. Según análisis realizados, la devaluación de la moneda alcanzó el 12% a lo largo del año, con un promedio de compra del dólar de 542 colones y venta de 548 colones. Este exceso de oferta de dólares se atribuye principalmente al aumento en la llegada de turistas al país, que alcanzó los 2.75 millones de visitantes extranjeros hasta septiembre de 2023, según datos del Instituto Costarricense de Turismo, y al crecimiento en la Inversión Extranjera Directa (IED), que registró un incremento del 16% hasta septiembre del 2023, representando la llegada al país de 2.691 millones de dólares, según el Ministerio de Comercio Exterior. Ante la posibilidad de una baja más pronunciada en el valor del dólar, el Banco Central intervino en el mercado mediante la compra de divisas en Monex, con el fin de satisfacer la demanda del sector público no financiero y aumentar las reservas monetarias internacionales.
+Durante el 2023, el tipo de cambio en Costa Rica se promedió en $₡544,5/US\$$, alcanzando un nivel de precios que no se había visto desde el año 2016. Este valor incluso superó la cifra registrada hace 14 años, en 2009. Según análisis realizados, la devaluación de la moneda alcanzó el 12% a lo largo del año, con un promedio de compra del dólar de 542 colones y venta de 548 colones. Este exceso de oferta de dólares se atribuye principalmente al aumento en la llegada de turistas al país, que alcanzó los 2.75 millones de visitantes extranjeros hasta septiembre de 2023, según datos del Instituto Costarricense de Turismo, y al crecimiento en la Inversión Extranjera Directa (IED), que registró un incremento del 16% hasta septiembre del 2023, representando la llegada al país de 2.691 millones de dólares, según el Ministerio de Comercio Exterior. Ante la posibilidad de una baja más pronunciada en el valor del dólar, el Banco Central intervino en el mercado mediante la compra de divisas en Monex, con el fin de satisfacer la demanda del sector público no financiero y aumentar las reservas monetarias internacionales.
 
 Para el año 2024, los analistas financieros proyectan una intervención cambiaria más cautelosa por parte del Banco Central, limitada a situaciones de sobreoferta de dólares. La expectativa de una inflación del 2% sugiere una estabilidad en el tipo de cambio. No se prevén eventos en Costa Rica que puedan ejercer presiones significativas al alza sobre el tipo de cambio, lo que lleva a proyecciones de un tipo de cambio estable. Además, la próxima recepción de $1 mil millones en Eurobonos también se considera en estas previsiones.
 
