--- a/Informe Contexto Económico.Rmd
+++ b/Informe Contexto Económico.Rmd
@@ -235,7 +235,117 @@ No obstante, es evidente que los salarios reales llegaron a caer en el 2022 incl
 
 # Índices de Precios al Consumidor
 # Déficit fiscal
+Como se ha analizado en el presente informe, Costa Rica en los años 2022 y 2023 esta mostrando una mejora a en la economía, y el caso del déficit fiscal no es la excepción. El siguiente gráfico esta representado el comportamiento del ingreso y gastos públicos de manera mensual durante el periodo analizado. 
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE, echo=FALSE}
+
+library(reshape2)
+Deficit_Fiscal <- read_excel("Deficit Fiscal.xlsx")
+
+Balance_Fiscal_L <- melt(
+    Deficit_Fiscal,
+    id.vars = "Detalle",
+    variable.name = "Mes",
+    value.name = "Balance"
+  ) %>% 
+  mutate()
+
+
+Balance_Fiscal_L$Mes <- Balance_Fiscal_L$Mes %>%
+  as.character() %>%
+  as.numeric()
+Balance_Fiscal_L <- Balance_Fiscal_L %>% 
+  mutate(
+    MesD = 
+      as.Date(
+        Balance_Fiscal_L$Mes,
+        origin = "1899-12-30"
+        )
+    )
+
+Balance_Fiscal_L %>%
+  filter(
+    Detalle == 
+        "A- Ingresos totales" |
+    Detalle ==
+       "B- Gastos Totales" |
+    Detalle == 
+      "C- Gastos primarios"
+    ) %>% 
+  ggplot(
+    aes(
+      y = 
+        Balance,
+      x =
+        MesD,
+      color = 
+        Detalle
+      )
+  )+
+  geom_line(
+    ) +
+  geom_point(
+    ) +
+  labs(
+    x =
+      "Mes",
+    y = 
+      "Balance Fiscal",
+    title = 
+      "Evolución del Balance Fiscal mensual en Costa Rica en millones",
+    subtitle =
+      "2022-2023") +
+  theme_minimal() +
+    theme(
+      legend.position =
+        "bottom",
+      plot.title = 
+        element_text(
+          hjust = 
+            0.5
+        ),
+      plot.subtitle =
+        element_text(
+          hjust = 
+            0.5
+        ),
+      plot.caption =
+        element_text(
+          hjust =
+            0,
+          color =
+            "black",
+          size =
+            8
+          )
+      ) +
+  labs(
+    caption =
+      expression(
+        bold(
+          "Fuente: "
+          ) * "Elaborado a partir de datos del BCCR."
+        )
+    ) + scale_color_manual(
+    values = 
+      c(
+        "#2F4F4F",
+        "cadetblue3",
+        "#A2CD5A"
+      )
+    ) +
+  scale_y_continuous(
+    labels = 
+      comma
+  )
+```
+
+
+Gracias a este observar se puede que en lo que respecta a gastos primarios, Costa Rica se ha mantenido en la mayoría del tiempo por debajo de los ingresos totales lo cual ha llevo a un Superávit Primario para el periodo 2022-2023, que según el boletín CP-10 del 2022 esta es una gran mejoría debido que este panorama no se presentaba desde el 2006. Asimismo, cumpliendo con una de las metas pactas con el Fondo Monetario Internacional (FMI) junto con esto también se ha mejorado la calificación crediticia del país como resalta el informe CP–12 de hacienda del 2024. Así consolidado un crecimiento económico por encima de las expectativas y una mejora en la salud financiera del país.
+
+Si bien estas son buenas expectativas, cuando se considera en el análisis el Gasto total, incluye el pago de intereses de deuda. Se puede observar que Costa Rica un sigue presentando un déficit fiscal para el periodo analizado. Aun así el pago el de intereses de deuda son los mayores, proporcionalmente con respecto al PIB, que en los realizados en los últimos 16 años.
+
+Con este análisis se puede concluir, que Costa Rica ha logrado avances positivos en la gestión fiscal, pero es fundamental seguir monitoreando y abordando los desafíos relacionados con el gasto y la deuda para mantener una economía sostenible y estable. El país debe continuar implementando políticas financieras responsables y buscar un equilibrio adecuado entre ingresos y gastos para garantizar su crecimiento económico a largo plazo.
 
 
 # Tipo de cambio
